kubernetes/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "vm.momo-store.cloud-ip.biz"
      secretName: momo-store-tls
  rules:
    - host: "vm.momo-store.cloud-ip.biz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8081
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8081
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8081
          - path: /categories
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8081
